syntax = "proto3";

package aether.cni.v1;

import "api/aether/cni/v1/cni.proto";

option go_package = "github.com/bpalermo/aether/api/aether/cni/v1;cniv1";

service CNIService {
  rpc AddPod (AddPodRequest) returns (AddPodResponse) {}
  rpc RemovePod (RemovePodRequest) returns (RemovePodResponse) {}
}

message AddPodRequest {
  CNIPod pod = 1;
}

message AddPodResponse {
  enum Result {
    RESULT_UNSPECIFIED = 0;
    SUCCESS = 1;
    ERROR = 2;
  }

  Result result = 1;
}

message RemovePodRequest {
  CNIPod pod = 1;
}

message RemovePodResponse {
  enum Result {
    RESULT_UNSPECIFIED = 0;
    SUCCESS = 1;
    ERROR = 2;
  }

  Result result = 1;
}
